continue editing report

--- a/reports/rag_experimentation_report.Rmd
+++ b/reports/rag_experimentation_report.Rmd
@@ -121,11 +121,13 @@ These metrics were implemented manually, by me, following a [tutorial from LangC
   - [BERTScore](https://github.com/Tiiiger/bert_score): Semantic similarity between response and reference
   - Word count and character count: Heuristic length metrics comparing hte actual output to the reference output
 
-Testing was conducted on a set of 78 domain-specific questions with reference answers. Each experimental configuration processed all questions, with results analyzed for statistical significance using ANOVA tests (producing F-values and p-values), pairwise t-tests between configurations, and regression analyses to determine correlations between parameters and performance metrics. For all ANOVA tests, I simulated approximate data distributions using the mean and standard deviation from each configuration and analyzed whether the observed differences between configurations were statistically significant at the p<0.05 level. Pairwise t-tests were conducted using Welch's method for unequal variances to identify which specific pairs of configurations differed significantly. Regression analyses helped quantify the relationship between configuration parameters (e.g., chunk size, overlap) and performance metrics, producing R² values to measure the strength of these relationships. For all LLM-as-judge evaluations (10 of the 13 metrics), I used GPT-4o as the judge model.
+Testing was conducted on a set of 78 domain-specific questions with reference answers. Each experimental configuration processed all questions, with results analyzed for statistical significance using ANOVA tests (producing F-values and p-values), pairwise t-tests between configurations, and regression analyses to determine correlations between parameters and performance metrics. For all LLM-as-judge evaluations (10 of the 13 metrics), I used GPT-4o as the judge model.
 
-I intentionally used overlapping metrics to cross-validate findings. The Simple Metrics and RAGAS Metrics measure similar concepts but differ in methodology. The Simple Metrics use a single inference request per question-answer pair to produce binary scores, while RAGAS metrics typically involve at least two inference calls. For example, while Simple Correctness produces a binary score about agreement with the reference answer, RAGAS Answer Accuracy performs two independent judge passes with scores from 0 to 2, then normalizes them to produce increments of 0.25. This results in more stable means across the full evaluation set.
+My metric selection evolved throughout the research process. I initially developed the four Simple Metrics from scratch following the intuition that I should measure relationships between the four pertinent components of any RAG system: the input question, retrieved contexts, output answer, and reference answer. These essential relationships form the foundation of RAG evaluation.
 
-The primary purpose of implementing Simple Metrics was to determine if comparable results could be achieved with fewer judge calls, potentially reducing costs. After Phase 1, I abandoned this approach as the RAGAS metrics proved more robust in their evaluation strategy, despite their higher computational expense.
+Unsatisfied with these initial results, further research led me to discover the equivalent RAGAS metrics, which appeared more robust in their implementation. I implemented these alongside my simple metrics to compare performance, specifically to determine if the simpler (and less computationally expensive) metrics could approximate the more sophisticated RAGAS evaluations at lower cost. The Simple Metrics and RAGAS Metrics measure similar concepts but differ in methodology. The Simple Metrics use a single inference request per question-answer pair to produce binary scores, while RAGAS metrics typically involve at least two inference calls. For example, while Simple Correctness produces a binary score about agreement with the reference answer, RAGAS Answer Accuracy performs two independent judge passes with scores from 0 to 2, then normalizes them to produce increments of 0.25. This results in more stable means across the full evaluation set.
+
+Still seeking more reliable evaluation signals, I explored additional evaluation frameworks and discovered DeepEval. Their G-Eval metric particularly impressed me during preliminary testing, demonstrating promising results that aligned well with my human judgment. As the research progressed, I came to rely on G-Eval as a key measure of success, giving it more weight in my human analysis compared to other metrics, though I maintained the full suite to ensure comprehensive evaluation across multiple dimensions.
 
 # Results and Findings
 
